# typebot

./: .gitignore  LICENSE  Procfile  README.md  app.cfg  stack.yaml  typebot.cabal
app/: Main.hs
src/: Bot.hs  Types.hs  Utils.hs
src/Providers/: Hayoo.hs  Hoogle.hs
test/: Spec.hs
