name:                typebot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sidrava/typebot#readme
license:             BSD3
license-file:        LICENSE
author:              Sid Raval
maintainer:          sidsraval@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bot, Types, Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , http-types
                     , text
                     , transformers
                     , containers
                     , aeson
                     , http-conduit
                     , network-uri
                     , html-entities
                     , HTTP
                     , mtl
                     , configurator
                     , data-default-class
                     , warp
  default-language:    Haskell2010

executable typebot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , typebot
  default-language:    Haskell2010

test-suite typebot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , typebot
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sidrava/typebot
